# graph-matching-core

./: .gitignore  LICENSE  MANIFEST.in  README.md  conftest.py  main.py  pyproject.toml  setup.py
analysis/: statistical_analysis_bagging_knn.ipynb  statistical_analysis_coarse_to_fine.ipynb  statistical_analysis_graph_reduction.ipynb
analysis/analysis_h_knn/: chart_analysis.ipynb
configuration/: configuration_bagging_knn.yml  configuration_coarse_to_fine.yml  configuration_complete_ged.yml  configuration_draw.yml  configuration_h_knn.yml  configuration_hierarchical.yml  configuration_knn.yml  configuration_knn_lc.yml
configuration_gnn_embedding/: configuration_gnn_embedding_knn.yml
cyged/: __init__.py
cyged/graph_pkg_core/: __init__.py
draw/: drawing.ipynb  sigma.exporters.svg.js
experiments/: matrix_distances.pxd  matrix_distances.pyx  run_bagging_knn.pyx  run_coarse_to_fine.pyx  run_complete_ged.pyx  run_draw.py  run_draw.pyx  run_h_knn.pyx  run_hierarchical.pyx  run_knn.pyx  run_knn_lc.pyx  run_matrix_distances.pxd  run_matrix_distances.pyx  runner.pyx  visualization.ipynb
experiments_gnn_embedding/: run_knn_gnn_embedding.pyx
graph_pkg/: administrator.pxd  administrator.pyx  coordinator.pxd  coordinator.pyx
graph_pkg/algorithm/: graph_edit_distance.pxd  graph_edit_distance.pyx  kmeans.pxd  kmeans.pyx  knn.pxd  knn.pyx  levenshtein_distance.pxd  levenshtein_distance.pyx  (+2 more)
graph_pkg_core/: __init__.py
hierarchical_graph/: gatherer_hierarchical_graphs.pxd  gatherer_hierarchical_graphs.pyx  hierarchical_graph.pxd  hierarchical_graph.pyx  hierarchical_graphs.pxd  hierarchical_graphs.pyx
(+302 files in other folders)
